--- a/SimpleOAuthOneLegged/SimpleOAuthOneLegged.csproj
+++ b/SimpleOAuthOneLegged/SimpleOAuthOneLegged.csproj
@@ -1,20 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{7195A9BE-2949-4819-9BEB-7B5F366B7CBC}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{D8589832-727F-4309-9B0D-7B2E1542317C}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SimpleOAuth</RootNamespace>
-    <AssemblyName>SimpleOAuth</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <RootNamespace>SimpleOAuthOneLegged</RootNamespace>
+    <AssemblyName>SimpleOAuthOneLegged</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,40 +21,34 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\SimpleOAuth.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\SimpleOAuth.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SimpleOAuth">
+      <HintPath>..\..\..\..\Users\Nicola\Downloads\SimpleOAuth.Net-master\SimpleOAuth.Net-master\SimpleOAuth\bin\Debug\SimpleOAuth.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="Generators\HmacSha1Generator.cs" />
-    <Compile Include="Generators\IGenerator.cs" />
-    <Compile Include="Generators\NonceGenerator.cs" />
-    <Compile Include="Generators\TimestampGenerator.cs" />
-    <Compile Include="Internal\AttributeExtensions.cs" />
-    <Compile Include="Internal\SignatureTypeAttribute.cs" />
-    <Compile Include="Models\KeyValue.cs" />
-    <Compile Include="OAuthRequestWrapper.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Generators\ISignatureGenerator.cs" />
-    <Compile Include="Internal\SignatureMethod.cs" />
-    <Compile Include="Tokens.cs" />
-    <Compile Include="Utilities\UrlHelper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="LICENSE" />
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
